# residual-offpolicy-rl

./: .gitignore  pyproject.toml  submit_train_gpu.sh  train_commands.sh  train_gpu.sbatch
resfit/aloha/: constants.py  setup_aloha.sh
resfit/aloha/environments/: aloha_sim.py
resfit/kinetix/: constants.py  jax_cuda_env.sh  setup_kinetix.sh
resfit/kinetix/environments/: kinetix_env.py  wrappers.py
resfit/kinetix/policies/: configuration_kinetix_flow.py  flow_model.py  kinetix_flow_policy.py  model_config.py
resfit/kinetix/utils/: checkpoints.py  deps.py  normalization.py
resfit/lerobot/: lerobot_requirements.txt  setup_lerobot.sh
resfit/lerobot/policies/pi0/: __init__.py  configuration_pi0.py  modeling_openpi_pi0_aloha_sim.py
resfit/lerobot/utils/: load_policy.py
resfit/rl_finetuning/config/: residual_td3.py  rlpd.py
resfit/rl_finetuning/off_policy/networks/: encoder.py
resfit/rl_finetuning/off_policy/rl/: actor.py  critic.py  q_agent.py
resfit/rl_finetuning/scripts/: train_residual_td3.py  train_rlpd_dexmg.py
resfit/rl_finetuning/shell/aloha/: 1_aloha_transfer_cube_residual_rl.sh  2_aloha_transfer_cube_residual_rl_inference_delay.sh
resfit/rl_finetuning/shell/kinetix/: 1_kinetix_mjc_swimmer_residual_rl.sh  2_kinetix_mjc_walker_residual_rl.sh  3_kinetix_car_launch_residual_rl.sh  (+6 more)
resfit/rl_finetuning/utils/: dtype.py  env_factory.py  evaluate_dexmg.py  evaluate_kinetix.py
resfit/rl_finetuning/wrappers/: residual_env_wrapper.py
resfit/scripts/: activate_residual_env.sh  conda_scratch.sh  scratch_env.sh
