[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resfit"
version = "0.1.0"
description = "Residual Off-Policy RL for Finetuning Behavior Cloning Policies"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["resfit*"]
